Fix for shifted error messages for some controls
Closes-bug: #1519273

--- a/nailgun/static/styles/main.less
+++ b/nailgun/static/styles/main.less
@@ -2975,6 +2975,11 @@ input[type=range] {
             max-width: 75%;
             width: 75%;
           }
+          &.has-error {
+            .help-block {
+              padding-left: 120px;
+            }
+          }
         }
       }
     }
@@ -4297,7 +4302,7 @@ input[type=range] {
   }
   .has-error {
     .help-block {
-      margin-left: 112px;
+      margin-left: 62px;
       font-size: @base-font-size - 2;
     }
   }
